--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "5.2.*",
         "unisharp/laravel-filemanager": "^1.6",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "kyslik/column-sortable": "5.0.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
